<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunteam.recorder.activity.RecordActivity" >

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/test" >
        

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/record"
            android:textSize="@dimen/title_text_size" />
        
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_gravity="bottom"
            android:background="@android:color/black" />
    </FrameLayout>
    
    <RelativeLayout
        android:id="@+id/ll_ready_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_timeLeft"
        android:layout_below="@+id/test" >

        <com.sunteam.recorder.textview.CustomTextView
            android:id="@+id/tv_parameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/parameter"
            android:textSize="@dimen/textsize" />
        <com.sunteam.recorder.textview.CustomTextView
            android:id="@+id/tv_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_parameter"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
    		android:ellipsize="marquee"
    		android:focusable="true" 
			android:focusableInTouchMode="true"
            android:text="@string/recording"
            android:visibility="gone"
            android:textSize="@dimen/textsize" />
	<RelativeLayout android:id="@+id/rl_recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:visibility="visible">
            <com.sunteam.recorder.textview.CustomTextView
            android:id="@+id/tv_recordtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:textSize="@dimen/textsize" />
		</RelativeLayout> 
        <com.sunteam.recorder.textview.CustomTextView
            android:id="@+id/tv_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/ready"
            android:textSize="@dimen/textsize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_timeLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.sunteam.recorder.textview.CustomTextView
            android:id="@+id/tv_timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeLeft"
            android:textSize="@dimen/textsize" />

        <com.sunteam.recorder.textview.CustomTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/time"
            android:textSize="@dimen/textsize" />
    </RelativeLayout>

</RelativeLayout>